updated Estonian translation

--- a/po/wesnoth-aoi/et.po
+++ b/po/wesnoth-aoi/et.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2009-12-25 14:02+0300\n"
+"PO-Revision-Date: 2011-12-28 09:45+0300\n"
 "Last-Translator: Kaido Kikkas <kakk@kakupesa.net>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -86,7 +86,7 @@ msgstr "Versiooni 1.4 järgsed täiendused"
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:53
 msgid "Artwork and Graphics Design"
-msgstr ""
+msgstr "Graafika ja disain"
 
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:60
@@ -343,7 +343,6 @@ msgstr "Isand!"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:216
-#, fuzzy
 msgid "Take... command... Drive them... away."
 msgstr "Võta.... juhtimine... Ajage nad.... minema."
 
@@ -358,15 +357,14 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:232
-#, fuzzy
 msgid ""
 "I’ve been bested, but the combat wasn’t fair... A thousand curses on you, "
 "withered coward! May you suffer... and when my master, Rualsha, finds you "
 "may he wipe your people from the face of this earth!"
 msgstr ""
 "Mind on võidetud, kuid lahing polnud aus... tuhat needust sinu peale, "
-"kõrendist argpüks! Saagu sa kannatama... ja kui isand Rualsha su kätte saab, "
-"pühkigu ta su rahvas maa pealt!"
+"kõrendist argpüks! Saagu sa kannatama... ja kui mu isand Rualsha su kätte "
+"saab, pühkigu ta su rahvas maa pealt!"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:243
@@ -450,19 +448,16 @@ msgstr ""
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:138
-#, fuzzy
 msgid "When the fighting ends, I’ll have some answers. But for now—"
-msgstr "Kui sõda läbi, tahan ma mõningaid vastuseid saada. Aga praegu..."
+msgstr "Peale lahingut tahan ma mõningaid vastuseid saada. Aga praegu..."
 
 #. [message]: id=Gharlsa
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:142
-#, fuzzy
 msgid "Gharlsa sees elves... yes... Fresh meat for wolves. Yes, yes..."
 msgstr "Gharlsa näeb haldjaid.... jah... värske liha huntidele. Jah-jah..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:146
-#, fuzzy
 msgid "— let’s focus on the task at hand."
 msgstr "...keskendume oma ülesandele."
 
@@ -478,19 +473,16 @@ msgstr "Välimus võib petlik olla. Käsi meestel ettevaatlik olla."
 
 #. [message]: id=Gharlsa
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:165
-#, fuzzy
 msgid "Yes... yes... Slay them!"
 msgstr "Jah... jah... tapke nad!"
 
 #. [message]: speaker=unit
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:176
-#, fuzzy
 msgid "Hurts... failed... Rualsha gonna be angry..."
 msgstr "Valus... Läbikukkumine... Rualsha saab kurjaks..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:187
-#, fuzzy
 msgid ""
 "This... ‘Rualsha’ again. We need to forge ahead; the answers we seek are not "
 "here. Perhaps we will find them further north."
@@ -500,7 +492,6 @@ msgstr ""
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:191
-#, fuzzy
 msgid ""
 "Destroy this place and let the forest take the ruins. We don’t want any more "
 "undesirables to use it."
@@ -544,7 +535,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:68
-#, fuzzy
 msgid ""
 "Erlornas was near-certain they would find orcs there. No clan of dwarves "
 "would break their ancient treaties with the elves in this way; humans were "
@@ -556,7 +546,7 @@ msgstr ""
 "murraks nõnda oma iidseid lepinguid haldjatega. Inimesed aga ei oleks "
 "korraldanud nii põhjalikku hävingut ega oleks ka sellise hulgaga siin "
 "põhjamaal, mida nad pidasid ebamugavalt külmaks ja niiskeks. Küsimus oli - "
-"kas see oligi Rualsha?"
+"kas see ongi Rualsha?"
 
 #. [part]
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:72
@@ -635,13 +625,11 @@ msgstr ""
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:198
-#, fuzzy
 msgid "You won... elf... But it changes... nothing... (<i>cough</i>)"
 msgstr "Sa võitsid... haldjas.. Aga... see ei... muuda... midagi. (köhib)"
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:202
-#, fuzzy
 msgid ""
 "We found the way... Now... we will come in numbers... (<i>cough</i>) you "
 "can’t imagine..."
@@ -651,7 +639,6 @@ msgstr ""
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:206
-#, fuzzy
 msgid "(<i>Cough</i>) I’ll be waiting... among the dead..."
 msgstr "(köhib) Ma ootan... surnute juures...."
 
@@ -1130,15 +1117,14 @@ msgstr "Aruanne."
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:154
-#, fuzzy
 msgid ""
 "A warband of orcs, no women or children among them, besieges a tower. It’s "
 "of human design... but we are far from the lands granted to humans by "
 "treaty, my lord Erlornas."
 msgstr ""
 "Orkide sõjasalk, ilma naiste-lasteta, piirab üht kindlust. See on inimeste "
-"ehitatud, kuid me oleme kaugel nendest maadest, mis inimestele lepingu järgi "
-"said, isand Erlornas."
+"ehitatud... kuid me oleme kaugel nendest maadest, mis inimestele lepingu "
+"järgi said, isand Erlornas."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:158
@@ -1184,7 +1170,6 @@ msgstr ""
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:178
-#, fuzzy
 msgid ""
 "Interesting... Go to my personal stores and bring me a bottle of wine. And a "
 "couple of glasses."
@@ -1193,7 +1178,6 @@ msgstr ""
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:182
-#, fuzzy
 msgid "... Glasses?"
 msgstr "... klaasi?"
 
@@ -1233,7 +1217,6 @@ msgstr "Veidi hiljem..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:240
-#, fuzzy
 msgid ""
 "So you decided to accept the invitation. Good. Welcome, I am lord Erlornas "
 "of Wesmere. I find your presence here... surprising."
@@ -1288,11 +1271,10 @@ msgstr ""
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:288
 #: data/campaigns/An_Orcish_Incursion/scenarios/06_A_Detour_through_the_Swamp.cfg:128
 msgid "Alas, Erlornas, I have failed us..."
-msgstr ""
+msgstr "Oh häda, Erlornas - ma kukkusin läbi..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:306
-#, fuzzy
 msgid ""
 "And that is well ended. But, Linaera, there is somewhat else that concerns "
 "me. You are a mage; do you not feel something... wrong... to the east of "
@@ -1416,7 +1398,6 @@ msgstr "Alista Rualsha"
 
 #. [message]: speaker=Lomarfel
 #: data/campaigns/An_Orcish_Incursion/scenarios/07_Showdown.cfg:222
-#, fuzzy
 msgid ""
 "My lord! We have ridden hard for over a week to catch up with you! The "
 "Ka’lian has deliberated, and asks you to defeat Rualsha quickly before he "
