--- a/po/wesnoth-did/et.po
+++ b/po/wesnoth-did/et.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-10-07 22:09+0200\n"
-"PO-Revision-Date: 2011-07-03 13:48+0300\n"
+"POT-Creation-Date: 2011-12-19 15:14+0100\n"
+"PO-Revision-Date: 2011-12-28 09:55+0300\n"
 "Last-Translator: Kaido Kikkas <kakk@kakupesa.net>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -56,10 +56,8 @@ msgstr "Manaja"
 
 #. [campaign]: id=Descent_into_Darkness
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:22
-#, fuzzy
-#| msgid "(Intermediate level, 11 scenarios.)"
 msgid "(Intermediate level, 12 scenarios.)"
-msgstr "(Keskmine tase, 11 stsenaariumi.)"
+msgstr "(Keskmine tase, 12 stsenaariumi.)"
 
 #. [campaign]: id=Descent_into_Darkness
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:22
@@ -154,14 +152,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:49
-#, fuzzy
-#| msgid ""
-#| "Shortly a man dressed in the robes of a necromancer emerged from the "
-#| "trees. “Allow me to introduce myself. I am Darken Volk. While I know your "
-#| "kingdom does not love my kind, I think it vital that we put aside our "
-#| "differences for the moment. The orc menace grows in the North, and I "
-#| "misdoubt any of the border towns can stand without some assistance. For "
-#| "now, I ask only to rest in your town for a few days.”"
 msgid ""
 "Shortly a man dressed in the robes of a necromancer emerged from the trees. "
 "<i>“Allow me to introduce myself. I am Darken Volk. While I know your "
@@ -179,13 +169,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:54
-#, fuzzy
-#| msgid ""
-#| "Drogan, the captain of the guard, replied, “Surely you know that the "
-#| "penalty for necromancy is death. For your aid we will promise you rest "
-#| "and safety. Upon your departure, however, you are banished from these "
-#| "lands, not to return on pain of death. We thank you for your help, but "
-#| "need no alliances with those who deal only in dark magic.”"
 msgid ""
 "Drogan, the captain of the guard, replied, <i>“Surely you know that the "
 "penalty for necromancy is death. For your aid we will promise you rest and "
@@ -193,10 +176,10 @@ msgid ""
 "to return on pain of death. We thank you for your help, but need no "
 "alliances with those who deal only in dark magic.”</i>"
 msgstr ""
-"Drogan, valvurite ülem, vastas: 'Kindlasti tead, et surnumanamist "
-"karistatakse surmaga. Sinu abi eest laseme sul siin vabalt puhata. Kui aga "
-"siit lahkud, pagendame su neilt maadelt surma ähvardusel. Täname sind abi "
-"eest, kuid me ei hakka nende liitlasteks, kes musta võlukunsti harrastavad.'"
+"Vahiülem Drogan vastas: 'Kindlasti tead, et surnumanamist karistatakse "
+"surmaga. Sinu abi eest laseme sul siin vabalt puhata. Kui aga siit lahkud, "
+"pagendame su neilt maadelt surma ähvardusel. Täname sind abi eest, kuid me "
+"ei hakka nende liitlasteks, kes musta võlukunsti harrastavad.'"
 
 #. [side]: type=General, id=Taylor
 #. [side]: type=Apprentice Mage, id=Malin Keshar
@@ -363,16 +346,12 @@ msgstr ""
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:230
-#, fuzzy
-#| msgid ""
-#| "No! No...it was nothing like that...but I will not stand by and allow the "
-#| "orcs to destroy my home while I have the skills to prevent it!"
 msgid ""
 "No! No... it was nothing like that... But I will not stand by and allow the "
 "orcs to destroy my home while I have the skills to prevent it!"
 msgstr ""
 "Ei! Ei... see polnud üldse nii... aga ma ei vaata pealt, kuidas orkid mu "
-"kodu hävitavad, kui mul on võimu seda ära hoida!"
+"kodu hävitavad, kui mul on oskusi, et  seda ära hoida!"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:244
@@ -472,11 +451,6 @@ msgstr ""
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:350
-#, fuzzy
-#| msgid ""
-#| "Perhaps I cannot kill them all...but I see the back-trail of this band we "
-#| "defeated, and there will be more orcs at the other end of it. I shall "
-#| "pursue them."
 msgid ""
 "Perhaps I cannot kill them all... but I see the back-trail of this band we "
 "defeated, and there will be more orcs at the other end of it. I shall pursue "
@@ -883,8 +857,6 @@ msgstr ""
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg:257
-#, fuzzy
-#| msgid "But why are they attacking me? And what should I do?!?"
 msgid "But why are they attacking me? And what should I do?!"
 msgstr "Aga miks nad mind ründavad? Ja mida ma pean tegema?"
 
@@ -1022,13 +994,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg:28
-#, fuzzy
-#| msgid ""
-#| "Word spreads to the south as well, of the many battles won against the "
-#| "orc tribes, as Darken Volk tells Malin. As spring rolls around, a number "
-#| "of dark adepts, eager to aid in the fight, travel northwards and join the "
-#| "pair. “They are quite useful in battle,” the necromancer says to Malin, "
-#| "“but none of them have even a tenth of your potential power.”"
 msgid ""
 "Word spreads to the south as well, of the many battles won against the orc "
 "tribes, as Darken Volk tells Malin. As spring rolls around, a number of dark "
@@ -1040,7 +1005,7 @@ msgstr ""
 "Darken Volk Malinile rääkis. Kevade jooksul rändasid Põhja mitmed "
 "võitlushimulised pimedusejüngrid ning ühinesid kahe manajaga. 'Neist on "
 "lahingus üsna palju kasu,' ütles surnumanaja Malinile, 'aga ühelgi neist "
-"pole kümnendikkugi sinu võimetest.'"
+"pole kümnendikkugi sinu võimalikust väest.'"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg:33
@@ -1340,13 +1305,6 @@ msgstr ""
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg:347
-#, fuzzy
-#| msgid ""
-#| "Gods of Darkness, how did it come to this? My own sister determined on my "
-#| "death. Nothing has gone right since...since that day the fat toad Zephrin "
-#| "mocked my up-country accent and I lost my temper and cursed him with "
-#| "boils. “A life curse goes beyond a joke,” they said. “Poor judgment,” "
-#| "they said, and expelled me from the Academy. "
 msgid ""
 "Gods of Darkness, how did it come to this? My own sister determined on my "
 "death. Nothing has gone right since... since that day the fat toad Zephrin "
@@ -1356,7 +1314,7 @@ msgid ""
 msgstr ""
 "Pimeduse jumalad, kuidas see nii läks? Mu oma õde soovib mu surma. Mitte "
 "miski pole läinud õieti, sellest ajast kui... too paks konn Zephrin narris "
-"mu mägismaa keelemurret ning ma kaotasin kannatuse ja needsin teda. 'Needus "
+"mu mägismaa keelemurret ning ma ägestudes talle paise külge needsin. 'Needus "
 "on naljast kaugel, ' ütlesid nad. 'Vale otsus,' ütlesid nad ja viskasid mu "
 "Akadeemiast välja."
 
@@ -1391,13 +1349,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:111
-#, fuzzy
-#| msgid ""
-#| "“For your final test as my apprentice, you will aid me in retrieving a "
-#| "book,” the necromancer says. “The book was... stolen from me long ago. "
-#| "Since it has personal value to me, think of the task as a small favor. I "
-#| "should warn you that it will require you to act against your countrymen "
-#| "of Wesnoth, since it was one of them who stole it from me.”"
 msgid ""
 "<i>“For your final test as my apprentice, you will aid me in retrieving a "
 "book,”</i> the necromancer says. <i>“The book was... stolen from me long "
@@ -1408,15 +1359,11 @@ msgstr ""
 "'Sinu viimaseks katseks minu õpilasena saab aidata mul leida üks raamat,' "
 "ütles surnumanaja. 'See raamat.... varastati minult kunagi ammu. Kuna see on "
 "mulle väärtuslik, mõtle sellest kui isiklikust väikesest teenest. Ma hoiatan "
-"sind, et see seab sind vastamisi ka enda kaasmaalastega Wesnothis - kuna "
+"sind, et see seab sind vastamisi ka su enda kaasmaalastega Wesnothis, kuna "
 "varas oli üks nende seast.'"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:116
-#, fuzzy
-#| msgid ""
-#| "Malin replies, “They are no longer countrymen of mine, since they have "
-#| "rejected me twice now.”"
 msgid ""
 "Malin replies, <i>“They are no longer countrymen of mine, since they have "
 "rejected me twice now.”</i>"
@@ -1426,13 +1373,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:121
-#, fuzzy
-#| msgid ""
-#| "Darken Volk continues, “Excellent. We travel, then, to the city of Tath. "
-#| "There is a lord of that city by the name of Karres. He was trained as a "
-#| "mage in his youth, and now uses his wealth to support a large number of "
-#| "mages in their studies. Among his library is the book we seek. We will "
-#| "need to break into his manor and seek the book inside.”"
 msgid ""
 "Darken Volk continues, <i>“Excellent. We travel, then, to the city of Tath. "
 "There is a lord of that city by the name of Karres. He was trained as a mage "
@@ -1441,9 +1381,10 @@ msgid ""
 "into his manor and seek the book inside.”</i>"
 msgstr ""
 "Darken Volk jätkas: 'Suurepärane. Sel juhul läheme Tathi linna. Selle linna "
-"isandaks on Karres. Ta õppis nooruses võluriks ja kasutab nüüd enda vara "
-"suure hulga võlurite õpingute toetamiseks. Raamat, mida me otsime, on tema "
-"raamatukogus.  Me peame tema majja sisse murdma ja raamatu leidma.'"
+"isandaks on Karrese-nimeline mees. Ta õppis nooruses võluriks ja kasutab "
+"nüüd enda vara suure hulga võlurite õpingute toetamiseks. Raamat, mida me "
+"otsime, on tema raamatukogus.  Me peame tema majja sisse murdma ja raamatu "
+"leidma.'"
 
 #. [side]: type=Apprentice Mage, id=Malin Keshar
 #. [side]
@@ -1760,10 +1701,8 @@ msgstr ""
 
 #. [message]: speaker=Darken Volk
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:228
-#, fuzzy
-#| msgid "We? WE do nothing. You are no longer my apprentice."
 msgid "‘We’? <i>We</i> do nothing. You are no longer my apprentice."
-msgstr "Meie? MEIE ei tee midagi. Sa pole enam mu õpilane."
+msgstr "Meie? MEIE ei tee midagi. Sa pole enam mu õpipoiss."
 
 #. [message]: speaker=Darken Volk
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:242
@@ -1982,21 +1921,11 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:18
-#, fuzzy
-#| msgid "“To become a lich, one must first die.”"
 msgid "<i>“To become a lich, one must first die.”</i>"
 msgstr "'Et saada sortsiks, tuleb esmalt surra.'"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:23
-#, fuzzy
-#| msgid ""
-#| "So reads the book that Malin has reclaimed. “The spells of necromancy "
-#| "bind the spirit, but only once it has been unbound from the body. To "
-#| "become a lich, the mage must make the necessary incantations with his "
-#| "dying breaths. He thus binds his own spirit in much the same way "
-#| "necromancers bind the spirits of others. Because he retains his own will, "
-#| "however, the lich can call upon the awesome powers of the spirit world.”"
 msgid ""
 "So reads the book that Malin has reclaimed. <i>“The spells of necromancy "
 "bind the spirit, but only once it has been unbound from the body. To become "
@@ -2009,7 +1938,7 @@ msgstr ""
 "hinge, kuid alles pärast selle vabanemist kehast. Sortsiks muutumiseks peab "
 "võlur lugema vajalikud sõnad enda viimaste hingetõmmetega. Nõnda seob ta "
 "enda hinge samamoodi kui surnumanajad seovad teiste hingi.  Kuna aga tal "
-"säilib tema enese tahe, suudab sorts käsutada hingede maailma suuri vägesid.'"
+"säilib tema enese tahe, suudab sorts käsutada hingede maailma tohutut väge.'"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:28
@@ -2144,7 +2073,7 @@ msgstr "Mal Keshar"
 #. [message]: speaker=Mal Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:417
 msgid "<big>AAAaaiiigghh!!</big>"
-msgstr ""
+msgstr "<big>AAAaaiiihhh!!</big>"
 
 #. [message]: speaker=Mal Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:422
@@ -2212,7 +2141,7 @@ msgstr ""
 #. [message]
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:677
 msgid "<big>AAAaaaggghhhh!! ...</big>"
-msgstr ""
+msgstr "<big>AAAaaahhhh!! ...</big>"
 
 #. [scenario]: id=12_Endless_Night
 #: data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg:6
